tests/baselines/reference/esDecorators-classDeclaration-methods-nonStaticAbstract(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
esDecorators-classDeclaration-methods-nonStaticAbstract.ts(6,5): error TS1249: A decorator can only decorate a method implementation, not an overload.
esDecorators-classDeclaration-methods-nonStaticAbstract.ts(7,5): error TS1249: A decorator can only decorate a method implementation, not an overload.
esDecorators-classDeclaration-methods-nonStaticAbstract.ts(8,5): error TS1249: A decorator can only decorate a method implementation, not an overload.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== esDecorators-classDeclaration-methods-nonStaticAbstract.ts (3 errors) ====
    declare let dec: any;
    
    const method3 = "method3";
    
    abstract class C {
        @dec(1) abstract method1(): void;
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
        @dec(2) abstract ["method2"](): void;
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
        @dec(3) abstract [method3](): void;
        ~
!!! error TS1249: A decorator can only decorate a method implementation, not an overload.
    }
    